--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -68,11 +68,13 @@
     "@tanstack/react-router": "^1.132.7",
     "@types/react": "catalog:react19",
     "better-auth": "catalog:",
+    "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "next": "catalog:",
     "react": "catalog:react19",
     "react-router": "^7.9.2",
-    "sonner": "^2.0.7"
+    "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@radix-ui/react-alert-dialog": "^1.1.15",
@@ -89,14 +91,17 @@
     "@tanstack/react-router": "^1.132.7",
     "@types/react": "catalog:react19",
     "better-auth": "catalog:",
+    "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "next": "catalog:",
     "react": "catalog:react19",
     "react-router": "^7.9.2",
     "sonner": "^2.0.7",
+    "tailwind-merge": "^3.3.1",
     "tsup": "catalog:"
   },
   "dependencies": {
+    "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-table": "^8.21.3",
     "zod": "^4.1.11"
   }
