--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -64,6 +64,7 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-router": "^1.132.7",
     "@types/react": "catalog:react19",
@@ -87,6 +88,7 @@
     "@radix-ui/react-popover": "^1.1.15",
     "@radix-ui/react-select": "^2.2.6",
     "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slider": "^1.3.6",
     "@radix-ui/react-tooltip": "^1.2.8",
     "@tanstack/react-router": "^1.132.7",
     "@types/react": "catalog:react19",
@@ -101,6 +103,7 @@
     "tsup": "catalog:"
   },
   "dependencies": {
+    "@origin-space/image-cropper": "^0.1.9",
     "@radix-ui/react-slot": "^1.2.3",
     "@tanstack/react-table": "^8.21.3",
     "zod": "^4.1.11"
