--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -30,7 +30,7 @@
     "better-auth": "catalog:",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
+    "cmdk": "catalog:",
     "drizzle-orm": "^0.44.5",
     "lucide-react": "^0.544.0",
     "next": "catalog:",
