--- a/packages/dashboard/package.json
+++ b/packages/dashboard/package.json
@@ -70,7 +70,7 @@
     "@types/react": "catalog:react19",
     "better-auth": "catalog:",
     "clsx": "^2.1.1",
-    "cmdk": "^1.1.1",
+    "cmdk": "catalog:",
     "next": "catalog:",
     "react": "catalog:react19",
     "react-router": "^7.9.2",
