--- a/apps/demo/package.json
+++ b/apps/demo/package.json
@@ -34,6 +34,7 @@
     "drizzle-orm": "^0.44.5",
     "lucide-react": "^0.544.0",
     "next": "catalog:",
+    "next-themes": "^0.4.6",
     "pg": "^8.16.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
